--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
+    <meta name="author" content="Ferrin Mutuku">
     <title>Ferrin Armstrong Mutuku | wdd130</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -21,6 +23,13 @@
             I'm also pursuing Information Technology at Kca University here in Kenya.<br>
             I enjoy playing video games and new adventures, like learning new languages e.g. python 🤭</p>
     </main>
+    <aside>
+        <h2>Nairobi</h2>
+        <img src="images/Nairobi.jpg" alt="Nairobi night view" width="400" height="300">
+        <p>Nairobi is the capital city of Kenya, a country located in the East of Africa</p>
+
+    </aside>
+    
     <footer>
         <p>©️2024 👀Ferrin Mutuku👀 Nairobi, Kenya</p>
     </footer>
