--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <a href="#">Home</a>
             <a href="wwr">Rafting website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://www.linkedin.com/in/ferrin-mutuku-21305911a/">linkedin profile</a>
+            <a href="https://web.facebook.com/profile.php?id=100089742810554">Facebook profile</a>
         </nav>
     </header>
     <main>
@@ -22,10 +24,17 @@
         <p>Hi! I'm Ferrin Mutuku, from Nairobi Kenya. I'm a software development student at Brigham Young University-Idaho.<br>
             I'm also pursuing Information Technology at Kca University here in Kenya.<br>
             I enjoy playing video games and new adventures, like learning new languages e.g. python 🤭</p>
+
+            <ul class="box">
+                <li><a href="//www.churchofjesuschrist.org/temples/details/nairobi-kenya-temple?lang=eng" target="_blank">Nairobi Kenya Temple</a></li>
+                <li><a href="//www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+                <li><a href="//www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=eng" target="_blank">Johannesburg South Africa Temple</a></li>
+            </ul>
+
     </main>
-    <aside>
+    <aside class="box">
         <h2>Nairobi</h2>
-        <img src="images/Nairobi.jpg" alt="Nairobi night view" width="400" height="300">
+        <img src="images/Nairobi.jpg" alt="Nairobi night view" width="300">
         <p>Nairobi is the capital city of Kenya, a country located in the East of Africa</p>
 
     </aside>
@@ -34,4 +43,5 @@
         <p>©️2024 👀Ferrin Mutuku👀 Nairobi, Kenya</p>
     </footer>
 </body>
+<!--last updated May 8th 2024 */ -->
 </html> 
