--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="https://web.facebook.com/profile.php?id=100089742810554">Facebook profile</a>
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1> Ferrin Mutuku | wdd 130</h1>
         <img src="images/profile.png" alt=" Ferrin Mutuku" width="200">
@@ -38,7 +39,7 @@
         <p>Nairobi is the capital city of Kenya, a country located in the East of Africa</p>
 
     </aside>
-    
+    </div>>
     <footer>
         <p>©️2024 👀Ferrin Mutuku👀 Nairobi, Kenya</p>
     </footer>
