--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,15 +9,14 @@
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="images/logo.png" alt="logo">
         <nav>
-            <a href="index.html"></a>
-            <a href="about.html"></a>
-            <a href="trips.html"></a>
-            <a href="contact.html"></a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact</a>
         </nav>
-
     </header>
 
     <main>
@@ -25,7 +24,8 @@
             <img src="images/hero.png" alt="an hero image">
             <h1> Rafting Site Company</h1>
             <article>
-              <img src="images/happyemployee.png" alt="happy employee" width="100">
+                <h3>Happy Employee</h3>
+              <img src="images/happyemployee.png" alt="happy employee">
               <p> We believe in the transformative power of nature and the thrill of adventure.<br> We respect the environment and strive to leave it better than we found it.
               </p>
             </article>
@@ -37,11 +37,17 @@
         </section>
         <section>
         <h2>Adventure Awaits You</h2>
-        <img src="images/rapidcamp.png" alt="rapidcamp" width="600"><br>
-        <img src="images/RiverSaganna.png" alt="River Saganna" width="600"><br>
-        <img src="images/Tourkenya.png" alt="Tour kenya" width="600"><br>
-        <img src="images/Water_rafting_expedition.png" alt="Water_rafting_expedition" width="600"><br>
-        <img src="images/Wilderness_water.png" alt="Wilderness_water" width="600">
+
+        <h3> Rapid Camp</h3>
+        <img src="images/rapidcamp.png" alt="rapidcamp">
+        <h3> River Sagana</h3>
+        <img src="images/RiverSaganna.png" alt="River Saganna">
+        <h3>Tour Kenya</h3>
+        <img src="images/Tourkenya.png" alt="Tour kenya">
+        <h3>Water Rafting Expedition </h3>
+        <img src="images/Water_rafting_expedition.png" alt="Water_rafting_expedition">
+        <h3>Wilderness Water</h3>
+        <img src="images/Wilderness_water.png" alt="Wilderness_water">
         </section>
 
     </main>
@@ -53,13 +59,10 @@
             </a>
             <a href="https://instagram.com">
                 <img src="https://cdn0.iconfinder.com/data/icons/brands-flat-2/192/instagram-social-network-brand-logo-64.png" alt="instagram">
-
             </a>
             <a href="https://twitter.com">
                 <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-64.png" alt="twiiter">
             </a>
-
-
         </nav>
     </footer>
     
