--- a/quiz.html
+++ b/quiz.html
@@ -35,7 +35,7 @@
 
                 <li>
                     <label for="q4">How Many Prophets are there in the book of Mormon</label><br>
-                    <input type="number" id="q4" min="10" max="30" required><br><br>
+                    <input type="number" id="q4" name="q4" min="10" max="30" required><br><br>
                 </li>
             </ol>
             <button type="submit">Submit Quiz</button>
