--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conatct | Ferrin Mutuku</title>
+    <title>Contact | Ferrin Mutuku</title>
     <meta name="description" content="a contact us page">
     <meta name="author" content="Ferrin Mutuku">
     <link rel="stylesheet" href="styles/rafting.css">
