--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -34,6 +34,18 @@
         <section class="employee-profiles">
             <h2>Meet Our Team</h2>
             <div class="profiles">
+                <figure>
+                    <figcaption> Kamau Kamene Guide</figcaption>
+                    <img src="images/Kamau_Kamene.png" alt="a picture of Kamau Kamene">
+                </figure>
+                <figure>
+                    <figcaption>Debra Waema operation Manager</figcaption>
+                    <img src="images/Debra_Waema.png" alt="a picture of epration manager Debra Waema">
+                </figure>
+                <figure>
+                <figcaption> James Kuria Safety Officer</figcaption>
+                <img src="images/James_Kuria.png" alt="a picture of James Kuria a Safety Officer">
+                </figure>
             </div>
         </section>
         <section class="contact-form">
