--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -50,7 +50,7 @@
         </section>
         <section class="contact-form">
             <h3>Let Us Reach Out to You</h3>
-            <form action="submit_form.php" method="post" id="contactForm"> 
+            <form action="submit_form.php" method="post" id="contact-form"> 
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br>
                 <label for="email">Email:</label>
