--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,14 +11,15 @@
 <body>
     <header class="header">
         <img src="images/logo.png" alt="logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+        <nav class="bar">
+            <ul>
+                <li><a href="index.html" target="_blank" rel="noopener noreferrer">Home</a></li>
+                <li><a href="about.html" target="_blank" rel="noopener noreferrer">About </a></li>
+                <li><a href="trips.html" target="_blank" rel="noopener noreferrer">Trips</a></li>
+                <li><a href="contact.html" class="active" target="_blank" rel="noopener noreferrer">Contact</a></li>
+            </ul>
         </nav>
     </header>
-
     <main>
         <div class="hero">
             <img src="images/hero.png" alt="an hero image">
