--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -11,11 +11,13 @@
 <body>
     <header class="header">
         <img src="images/logo.png" alt="logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html" class="active">Contact</a>
+        <nav class="bar">
+            <ul>
+                <li><a href="index.html" target="_blank" rel="noopener noreferrer">Home</a></li>
+                <li><a href="about.html" target="_blank" rel="noopener noreferrer">About </a></li>
+                <li><a href="trips.html" target="_blank" rel="noopener noreferrer">Trips</a></li>
+                <li><a href="contact.html" class="active" target="_blank" rel="noopener noreferrer">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -52,25 +54,25 @@
             <h3>Let Us Reach Out to You</h3>
             <form action="submit_form.php" method="post" id="contact-form"> 
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br>
+                <input type="text" id="name" name="name" required><br><br>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
                 <fieldset>
                     <legend>Purpose of Message:</legend>
                     <label>
-                        <input type="radio" name="purpose" value="reservation">Reservation Question<br>
+                        <input type="radio" id="purpose" value="reservation">Reservation Question<br>
                     </label>
                     <label>
-                        <input type="radio" name="purpose" value="suggestion">Website Suggestion<br>
+                        <input type="radio" id="pupose" value="suggestion">Website Suggestion<br>
                     </label>
                     <label>
-                        <input type="radio" name="purpose" value="feedback">General Feedback
+                        <input type="radio" id="purpos" name="purpose" value="feedback">General Feedback
                     </label>
                 </fieldset>
                 <label for="message">Message:</label><br>
                 <textarea name="message" id="message" required></textarea><br>
                 <label>
-                    <input type="checkbox" name="newsletter">Please subscribe me to the monthly newsletter
+                    <input type="checkbox" id="newsletter" name="newsletter">Please subscribe me to the monthly newsletter
                 </label><br>
 
                 <button type="submit" class="submit_button">Send Message</button>
