--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -35,20 +35,31 @@
 
         <section class="employee-profiles">
             <h2>Meet Our Team</h2>
-            <div class="profiles">
-                <figure>
-                    <figcaption> Kamau Kamene Guide</figcaption>
-                    <img src="images/Kamau_Kamene.png" alt="a picture of Kamau Kamene">
-                </figure>
-                <figure>
-                    <figcaption>Debra Waema operation Manager</figcaption>
-                    <img src="images/Debra_Waema.png" alt="a picture of epration manager Debra Waema">
-                </figure>
-                <figure>
-                <figcaption> James Kuria Safety Officer</figcaption>
-                <img src="images/James_Kuria.png" alt="a picture of James Kuria a Safety Officer">
-                </figure>
-            </div>
+            <figure>
+                <figcaption> Kamau Kamene Guide</figcaption>
+                <img src="images/Kamau_Kamene.png" alt="a picture of Kamau Kamene">
+            </figure>
+            <figure>
+                <figcaption>Debra Waema operation Manager</figcaption>
+                <img src="images/Debra_Waema.png" alt="a picture of epration manager Debra Waema">
+            </figure>
+            <figure>
+            <figcaption> James Kuria Safety Officer</figcaption>
+            <img src="images/James_Kuria.png" alt="a picture of James Kuria a Safety Officer">
+            </figure>
+            <figure>
+            <figcaption>Maina Bango Safety Officer Assistant</figcaption>
+            <img src="images/maina_bango.jpg" alt="maina">
+            </figure>
+            <figure>
+                <figcaption>Mutua Kimani Guide</figcaption>
+                <img src="images/Mutua_kimani.jpg" alt="Guide">
+            </figure>
+            <figure>
+                <figcaption>Christopher Zenga Guide</figcaption>
+                <img src="images/christopher_zenga.jpg" alt="Guide">
+            </figure>
+
         </section>
         <section class="contact-form">
             <h3>Let Us Reach Out to You</h3>
