--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
     <meta name="author" content="Ferrin Mutuku">
-    <title>Ferrin Armstrong Mutuku | wdd130</title>
+    <title>Ferrin Armstrong Mutuku | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -38,7 +38,7 @@
         <p>Nairobi is the capital city of Kenya, a country located in the East of Africa</p>
 
     </aside>
-    </div>>
+    </div>
     <footer>
         <p>©️2024 👀Ferrin Mutuku👀 Nairobi, Kenya</p>
     </footer>
