--- a/wwr/index.html
+++ b/wwr/index.html
@@ -60,9 +60,18 @@
         </div>   
 
         <footer>
-            <a href="wireframe.png">wireframe</a><br>
+            <a href="images/home_wireframe.png">wireframe</a>
             <p>©️2024 Rafting Site Company Ferrin Mutuku</p>
             <nav class="sociallinks">
+                <a href="https://Facebook.com">
+                    <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_facebook-64.png" alt="Facebook">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="https://cdn0.iconfinder.com/data/icons/brands-flat-2/192/instagram-social-network-brand-logo-64.png" alt="instagram">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-64.png" alt="twiiter">
+                </a>
             </nav>
         </footer>
     </main>
