--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -103,6 +103,7 @@
     </main>  
 <footer>
     <p>©️2024 👀Rafting Site Company👀 Ferrin Mutuku👀</p>
+    <a href="images/trips_wireframe.png">wireframe</a>
     <nav class="sociallinks">
         <a href="https://Facebook.com">
             <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_facebook-64.png" alt="Facebook">
